change text and fix wrap

--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,8 @@ a {
 .page-content {
   width: 100%;
   color: white;
-
+  text-align: center;
+  max-width: 1800px;
 }
 
 .panel {
@@ -82,7 +83,6 @@ a {
   background-color: #f7f7f7;
   margin-top: 30px;
   margin-bottom: -20px;
-
 }
 
 .tile {
